compile instruction